fix showing X sign for popup on small screens

--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -30,9 +30,6 @@ and open the template in the editor.
     div#popup-container div.product-popup{
         width: 45%;
     }
-/*    div.product-popup {
-        width: 40%;
-    }*/
 }
 
 @media screen and (max-width: 1050px){
@@ -79,6 +76,8 @@ and open the template in the editor.
     
     main{
         width: 100%;
+        box-shadow: 0px -0.5px 7px rgba(182, 182, 182, 0.75);
+        padding-bottom: 0;
     }
     
     main section.body div.product div.product-description h3{
@@ -90,32 +89,15 @@ and open the template in the editor.
     }
     
     main section.body div.product div.product-price{
-     padding-bottom: 1rem; 
+        padding-bottom: 1rem; 
     }
     
-    main section.header{
+    main section.header, main section.body-footer, header#desktop, footer{
         display:none;
-    }
-    
-    main{
-        box-shadow: 0px -0.5px 7px rgba(182, 182, 182, 0.75);
-        padding-bottom: 0;
-    }
-    
-    main section.body-footer{
-        display: none;
-    }
-    
-    header#desktop{
-        display: none;
     }
     
     header#mobile{
         display: flex;
-    }
-    
-    footer{
-        display: none;
     }
     
     div.product-popup{
@@ -127,11 +109,16 @@ and open the template in the editor.
         left: 0;
         top: -1rem;
     }
+    
+    div#popup-container div.product-popup{
+        padding-top: 3rem;
+    }
 }
 @media screen and (min-width: 550px){
     nav#mobile-menu{
         display: none;
     }
+    
 }
 
 @media screen and (max-width: 400px){
